# AAQ

./: .PRODUCTION_LOW_SPEED_QUANT_SYSTEM_DESIGN.md.swp  .env.example  .gitignore  ADR_LIST.md  ALERT_RULES.md  ARCH_AS_IS.md  ARCH_TO_BE.md  BASELINE.md  CHAOS_REPORT.md  COVERAGE_REPORT.md  EVENT_DRIVEN_MIGRATION_BLUEPRINT_V1.md  FAILURE_CASES.md  METRICS_DICTIONARY.md  OBSERVABILITY_DESIGN.md  PRODUCTION_LOW_SPEED_QUANT_SYSTEM_DESIGN.md  README.md  ROLLOUT_PLAN_TO_BE.md  RUNBOOK.md  TEST_PLAN.md  _tmp_finalize_audit.py  _tmp_generate_audit.py  audit_report.md  call_graph.json  code_review_report.md  comprehensive_remediation_plan.md  evolution_plan.md  final_report.md  issues_master.json  pyproject.toml  remediation_plan_v2.md  review_fix_and_evolution_plan.md
.venv311/: pyvenv.cfg
fixes/: fix_ID1.md  fix_ID10.md  fix_ID11.md  fix_ID12.md  fix_ID13.md  fix_ID14.md  fix_ID15.md  fix_ID2.md  fix_ID3.md  fix_ID4.md  fix_ID5.md  fix_ID6.md  fix_ID7.md  fix_ID8.md  fix_ID9.md
phase0/: __init__.py
scripts/: coverage_gate.py  generate_project_assembly_sheet.py  generate_relationship_tables.py  healthcheck.py  ibkr_execute.py  ibkr_paper_check.py  llm_connectivity_check.py  non_ai_full_test.py  non_ai_validation_report.py  phase0_validation_report.py  refactor_capture_baseline.py  refactor_compare_baseline.py  replay.py
tests/: test_advisory_governance.py  test_ai_layers.py  test_app_health.py  test_audit_and_memory_persistence.py  test_chaos_resilience.py  test_config.py  test_contract_aliases.py  test_discipline_and_ibkr_adapter.py  test_event_driven_engines.py  (+23 more)
(+58 files in other folders)
